# Fluence

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  .spectral.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  PLAN.md  Project.md  README.md  SECURITY.md  SPEC.md  commitlint.config.mjs  deny.toml  eslint.config.js  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.base.json  typos.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  debt.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  integration.yml  nightly.yml  release.yml
apps/cli/: Cargo.toml  README.md
apps/cli/src/: discovery.rs  main.rs
apps/cli/tests/: cli_against_hub.rs
apps/desktop/: README.md  tauri.conf.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/e2e/: .gitignore  package.json  playwright.config.ts  playwright.demo.config.ts  tsconfig.json
apps/e2e/src/: composer-page.ts  fixtures.ts  hub-harness.ts
apps/web-client/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/web-client/public/: manifest.webmanifest
apps/web-client/src/: antiflicker.ts  caregiver.test.ts  caregiver.ts  composer.test.ts  composer.ts  coords.ts  dom.ts  gaze-controller.ts  gaze-estimate.test.ts  gaze-estimate.ts  gaze-frames.test.ts  gaze-frames.ts  gaze-source.ts  i18n.ts  keyboard.ts  main.ts  metrics.ts  styles.css
crates/fluence-accel/: Cargo.toml
crates/fluence-accel/src/: lib.rs  postprocess.rs  prompt.rs  tokens.rs
crates/fluence-hub/: Cargo.toml
crates/fluence-hub/src/: auth.rs  config.rs  events.rs  lib.rs  main.rs  maintenance.rs  state.rs  telemetry.rs
crates/fluence-hub/src/api/: devices.rs  input.rs  mod.rs  pair.rs  sessions.rs  suggest.rs  system.rs  voice.rs  ws.rs
crates/fluence-hub/src/supervisor/: backoff.rs  llama.rs  mod.rs
crates/fluence-hub/tests/: api_security.rs  draft_lifecycle.rs  kill_tests.rs  llama_supervision.rs  next_chars.rs  suggest.rs
crates/fluence-inference/: Cargo.toml
crates/fluence-inference/src/: backend.rs  lib.rs  llama_server.rs
crates/fluence-input/: Cargo.toml
crates/fluence-input/src/: calibration.rs  fixation.rs  fusion.rs  gaze.rs  geometry.rs  lib.rs  one_euro.rs  replay.rs
crates/fluence-input/tests/: robustness.rs
crates/fluence-ipc/: Cargo.toml
crates/fluence-ipc/src/: endpoint.rs  lib.rs  messages.rs  transport.rs
crates/fluence-ipc/tests/: transport_roundtrip.rs
crates/fluence-models/: Cargo.toml
crates/fluence-models/src/: gc.rs  lib.rs  manifest.rs  verify.rs
crates/fluence-ngram/: Cargo.toml
crates/fluence-ngram/data/: french_base_words.txt
crates/fluence-ngram/src/: lib.rs  main.rs
crates/fluence-protocol/: Cargo.toml
crates/fluence-protocol/src/: common.rs  contracts.rs  error.rs  input.rs  lib.rs  routes.rs  ws.rs
crates/fluence-protocol/src/api/: asr.rs  devices.rs  memory.rs  mod.rs  pair.rs  profiles.rs  sessions.rs  suggest.rs  system.rs  voice.rs
crates/fluence-protocol/tests/: fixture_roundtrips.rs  proptests.proptest-regressions  proptests.rs
crates/fluence-protocol/tests/fixtures/: health_response.json  memory_item.json  pointer_sample.json  problem.json  selection_events.json  server_frames.json  suggest_events.json  suggest_request.json  switch_event.json  target_map.json
crates/fluence-store/: Cargo.toml
crates/fluence-store/src/: actor.rs  backup.rs  key.rs  lib.rs  recovery.rs  schema.rs  types.rs
crates/fluence-store/tests/: backup_roundtrips.rs  store_roundtrips.rs
crates/fluence-voice/: Cargo.toml
crates/fluence-voice/src/: lib.rs  piper.rs  system.rs  wav.rs
crates/fluence-watchdog/: Cargo.toml
crates/fluence-watchdog/src/: lib.rs
docs/: PLAN.md  SPEC.md
docs/adr/: 0000-template.md  0001-architecture-hub-workers.md  0002-monorepo-et-contrats.md  0003-outillage-phase-0.md  0004-decisions-de-contrat-v1.md  0005-architecture-hub-phase-2.md  0006-harnais-eval-phase-3.md  0007-integration-llama-cpp.md  0008-critere-valeur-phase4-wpm.md  0009-audio-wav-v0.md
docs/audits/: phase2-hub-vital.md
docs/demos/: phase2-hub.md  phase5-loop.md  phase6-gaze.md
docs/install/: getting-started.md  trackers.md  troubleshooting.md
docs/ops/: soak.md
docs/security/: threat-model.md
docs/site/: index.html
ml/: pyproject.toml
ml/data/: pyproject.toml
ml/data/corpus/: v0.jsonl  v1.datasheet.md  v1.jsonl
ml/data/tests/: test_antipathos.py  test_azerty.py  test_corpus_v0.py  test_corpus_v1.py  (+3 more)
ml/eval/: pyproject.toml
ml/eval/baselines/: ngram-pr-v0.json
ml/eval/src/fluence_eval/: __init__.py  __main__.py  cli.py  live.py  measure.py  metrics.py  ngram.py  rephrase.py  result.py  runner.py  sources.py  user.py
ml/eval/tests/: test_cli.py  test_eval_licensing.py  test_live.py  test_measure.py  test_metrics.py  test_ngram.py  test_rephrase.py  test_result.py  test_runner.py  test_user.py
ml/training/: pyproject.toml
models/: README.md  gaze-assets.json  test-assets.json
schemas/: AccessJournalResponse.json  CapabilitiesResponse.json  ClientFrame.json  ConsentResponse.json  CreateMemoryItem.json  CreateSessionResponse.json  DeviceList.json  Draft.json  EmergencyRequest.json  ForgetCandidates.json  ForgetRequest.json  HealthResponse.json  InputClientMessage.json  ListeningRequest.json  MemoryItem.json  MemorySearchResponse.json  NextCharsResponse.json  PairInfo.json  PairRequest.json  PairResponse.json  PairWindowRequest.json  PairWindowResponse.json  PendingResponse.json  Problem.json  Profile.json  SelectionEvent.json  ServerFrame.json  SpeakRequest.json  SuggestEvent.json  SuggestRequest.json  TargetMap.json  Turn.json  VoicesResponse.json  openapi.json
xtask/: Cargo.toml
xtask/src/: assets.rs  contracts.rs  eval.rs  gaze.rs  gaze_assets.rs  latency.rs  licenses.rs  main.rs  models.rs
xtask/tests/: repo_compliance.rs
(+14 files in other folders)
