[package]
name = "xtask"
description = "Repository tasks: check-licenses, check-contracts, download-test-assets, run-eval"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true
