[package]
name = "fluencectl"
description = "Fluence command-line tool: health, pairing, event watch, access journal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
# Application layer (D-10.1): AGPL-3.0-only, not the Apache brick licence.
license = "AGPL-3.0-only"
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "fluencectl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
directories = "6"
fluence-protocol = { version = "0.0.0", path = "../../crates/fluence-protocol" }
serde = "1"
serde_json = "1"
tungstenite = "0.29"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
fluence-hub = { version = "0.0.0", path = "../../crates/fluence-hub" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
