[package]
name = "fluence-hub"
description = "Fluence hub: HTTP/WS API, worker supervision, selection engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
base64 = "0.22.1"
chrono = { version = "0.4.45", default-features = false, features = ["serde", "clock"] }
directories = "6.0.0"
fluence-accel = { version = "0.0.0", path = "../fluence-accel" }
fluence-inference = { version = "0.0.0", path = "../fluence-inference" }
fluence-ipc = { version = "0.0.0", path = "../fluence-ipc" }
fluence-ngram = { version = "0.0.0", path = "../fluence-ngram" }
fluence-protocol = { version = "0.0.0", path = "../fluence-protocol" }
fluence-store = { version = "0.0.0", path = "../fluence-store" }
rand = "0.10.1"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sysinfo = "0.38.4"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "net", "process", "time", "io-util", "sync", "fs"] }
tokio-stream = "0.1.17"
toml = "1.1.2"
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.23.3", features = ["v4"] }

[dev-dependencies]
fluence-inference = { version = "0.0.0", path = "../fluence-inference" }
fluence-ngram = { version = "0.0.0", path = "../fluence-ngram" }
sysinfo = "0.38.4"
tempfile = "3.27.0"
tower = { version = "0.5.3", features = ["util"] }
tungstenite = "0.29.0"
ureq = { version = "3.3.0", features = ["json"] }
