[package]
name = "fluence-inference"
description = "Inference workers: LLM (llama.cpp), ASR, TTS, embeddings behind FFI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
fluence-protocol = { version = "0.0.0", path = "../fluence-protocol" }
thiserror = "2.0.18"
