[package]
name = "fluence-input"
description = "Input engine: drivers, multimodal fusion, calibration, dwell/scan selection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true
