[package]
name = "fluence-input"
description = "Input engine: drivers, multimodal fusion, calibration, dwell/scan selection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
# The protocol owns the input vocabulary (targets, rects, selection events).
fluence-protocol = { version = "0.0.0", path = "../fluence-protocol" }
# Versioned, persistable calibration profiles (the gaze→screen mapping, D-4.4).
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
proptest = "1"
serde_json = "1"
