[package]
name = "fluence-ipc"
description = "Hub↔worker IPC: length-prefixed JSON over UDS (Linux) / named pipes (Windows)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["net", "io-util", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["full"] }
