[package]
name = "fluence-ngram"
description = "Compact French frequency model: the always-loaded fallback predictor (SPEC §2.C, D-2.6)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
