[package]
name = "fluence-protocol"
description = "Single source of truth for Fluence types and schemas (input protocol, hub API)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true
