[package]
name = "fluence-store"
description = "Encrypted persistence: profiles, personal memory, access journals, drafts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["serde", "clock"] }
fluence-protocol = { version = "0.0.0", path = "../fluence-protocol" }
hex = "0.4.3"
keyring = { version = "3", features = ["windows-native", "sync-secret-service", "crypto-rust"] }
rand = "0.10.1"
rusqlite = { version = "0.37", features = ["bundled-sqlcipher-vendored-openssl"] }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["sync", "rt"] }
tracing = "0.1.44"

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
