[package]
name = "fluence-voice"
description = "Voice pipeline: Piper real-time TTS, personal voice cloning, prosody"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true
