[package]
name = "fluence-voice"
description = "Voice pipeline: Piper real-time TTS, personal voice cloning, prosody"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
fluence-protocol = { version = "0.0.0", path = "../fluence-protocol" }
serde_json = "1.0.150"
tempfile = "3.27.0"
thiserror = "2.0.18"
tracing = "0.1.44"
