[project]
name = "fluence-eval"
version = "0.0.0"
description = "Simulation harness: simulated users, KS%/WPM metrics, CI gates (SPEC §8.A)"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.9"]

[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"
